добавлены некоторые поправки

--- a/technomart/index.html
+++ b/technomart/index.html
@@ -302,6 +302,7 @@
                         <div class="service-description credit-service">
                             <h3 class="service-description-title">Кредит</h3>
                             <p>Залезть в долговую яму стало проще! <br> Кредитные консультанты придут вам на помощь.</p>
+                            <a href="#" class="button button-red">Открыть каталог</a>
                         </div>
                     </div>
                 </div>
