--- a/technomart/index.html
+++ b/technomart/index.html
@@ -331,9 +331,13 @@
                     <h2 class="block-title">Контакты</h2>
                     <p>Вы можете забрать свой товар сами, <br>
                        заехав в наш офис:</p>
-                    <a href="#">                      
+                    <a href="#" class="open-map">                     
                         <img src="img/picture-map.jpg" width="300" height="155" alt="Схема проезда">
                     </a>
+                    <div class="modal-content-map"> 
+                        <div class="modal-content-map-close"></div> 
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1998.589387925593!2d30.3213667!3d59.9389554!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sua!4v1435310490433" width="940" height="445" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
                     <a href="#" class="button button-red">Заблудились? Напишите нам!</a>
                 </div>
             </div>
@@ -423,6 +427,7 @@
                 </div>
             </div>
         </footer>
+    <script src="js/jquery.js"></script> 
     <script src="js/script.js"></script>    
     </body>
 </html>
